application_cluster/kubernetes/additional_resources/functional/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: application-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:722377226063:certificate/0d37cdbc-5f5a-4193-b097-3113e0fc6a56
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak-application
                port:
                  number: 80
          - path: /student-markbook
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
